2008-12-29  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.4

	* configure.ac: 0.3.4

2008-12-19  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hildon-home.c (main): Initialize Hildon with hildon_init ().

2008-12-18  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/Makefile.am:
	* src/hd-task-manager.c (hd_task_manager_load_desktop_file):
	* src/home.conf.in:
	* src/home-w50.plugins (deleted): Remove Xmas workarounds.

2008-12-17  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.3

2008-12-17  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-bookmark-shortcut.c (hd_bookmark_shortcut_realize):
	* src/hd-task-shortcut.c (hd_task_shortcut_realize): Use rgb windows
	as long as rgba windows are not shown on the device.

2008-12-16  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.2

2008-12-16  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-bookmark-shortcut.c (hd_bookmark_shortcut_class_init,
	  hd_bookmark_shortcut_init): Add shadow.
	* src/hd-task-shortcut.c (hd_task_shortcut_class_init,
	  hd_task_shortcut_init): Add shadow.

2008-12-15  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-bookmark-shortcut.c (hd_bookmark_shortcut_expose_event,
	  hd_bookmark_shortcut_init): Use background image from theme.

2008-12-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.1

2008-12-15  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-activate-views-dialog.c (hd_activate_views_dialog_init): Fix
	  localized strings.
	* src/hd-change-background-dialog.c (response_cb,
	  hd_change_background_dialog_init): Fix localised strings.

	* src/hd-bookmark-shortcut.c (gconf_client, thumbnail_icon,
	  hd_bookmark_shortcut_update_from_gconf, hd_bookmark_shortcut_realize,
	  rounded_rectangle, hd_bookmark_shortcut_expose_event,
	  hd_bookmark_shortcut_class_init, hd_bookmark_shortcut_init): Draw
	  nicer shortcut.

	* src/hd-task-shortcut.c (hd_task_shortcut_expose_event): Use a
	  smaller curve.
