@@ -1,6 +1,6 @@
 hildon-home (0.3.5~unreleased) unstable; urgency=low
 
-  * unreleased
+  * Only draw thumbnail icon if available. Fixes NB#96683
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 29 Dec 2008 15:46:33 +0200
 
